WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
295867
[Cleanup] inlineBlockBaseline should not be called with RenderTextControlInnerBlock
https://bugs.webkit.org/show_bug.cgi?id=295867
Summary
[Cleanup] inlineBlockBaseline should not be called with RenderTextControlInne...
alan
Reported
2025-07-13 14:30:26 PDT
ssia
Attachments
Patch
(4.73 KB, patch)
2025-07-13 14:31 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(118.41 KB, patch)
2025-07-13 14:32 PDT
,
alan
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(4.73 KB, patch)
2025-07-22 20:01 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(4.73 KB, patch)
2025-07-23 05:24 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2025-07-13 14:31:57 PDT
Created
attachment 475962
[details]
Patch
alan
Comment 2
2025-07-13 14:32:53 PDT
Created
attachment 475963
[details]
Patch
Radar WebKit Bug Importer
Comment 3
2025-07-20 14:31:12 PDT
<
rdar://problem/156271909
>
alan
Comment 4
2025-07-22 20:01:06 PDT
Created
attachment 476162
[details]
Patch
alan
Comment 5
2025-07-23 05:24:13 PDT
Created
attachment 476164
[details]
[fast-cq]Patch
EWS
Comment 6
2025-07-23 05:27:59 PDT
Committed
297783@main
(6f8a06cc4937): <
https://commits.webkit.org/297783@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 476164
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug