[Cleanup] inlineBlockBaseline should not be called with RenderTextControlInnerBlock https://bugs.webkit.org/show_bug.cgi?id=295867

Reviewed by Antti Koivisto.

This is in preparation for calling inlineBlockBaseline with inline-blocks only.

* Source/WebCore/layout/integration/LayoutIntegrationBoxGeometryUpdater.cpp:
(WebCore::LayoutIntegration::inlineBlockBaseline):

Canonical link: https://commits.webkit.org/297783@main